<resources>
    <string name="app_name">myGreenhouse</string>
    <string name="title_my_plants">My Plants</string>
    <string name="title_tips">Care Tips</string>
    <string name="title_settings">Settings</string>
    <string name="grid_layout">GRID LAYOUT</string>

    <string name="moisture_label">Moisture: </string>
    <string name="temperature_label">Temperature: </string>
    <string name="humidity_label">Humidity: </string>
    <string name="sunlight_label">Sunlight: </string>

    <string name="label_new_location">Create New Location</string>
    <string name="label_new_plant">Create New Plant</string>

    <string name="current_plant_values"><u>Current Plant Data</u></string>
    <string name="moisture_chart_label"><u>Moisture History</u></string>
    <string name="temperature_chart_label"><u>Temperature History</u></string>
    <string name="humidity_chart_label"><u>Humidity History</u></string>
    <string name="sunlight_chart_label"><u>Sunlight History</u></string>

    <string name="key_plant_notifications">key_plant_notifications</string>
    <string name="key_app_version">key_app_version</string>

    <integer name="moisture_max_set_point">1000</integer>
    <integer name="moisture_min_set_point">0</integer>
    <integer name="temperature_max_set_point">1000</integer>
    <integer name="temperature_min_set_point">0</integer>
    <integer name="humidity_max_set_point">1000</integer>
    <integer name="humidity_min_set_point">0</integer>
    <integer name="sunlight_max_set_point">1000</integer>
    <integer name="sunlight_min_set_point">0</integer>
</resources>
