<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/plant_details_full_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/plant_details_appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/plant_details_collapsing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/plant_details_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:transitionName="plant_image"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/plant_details_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/plant_details_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/plant_details_current_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/current_plant_values"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <include
                        android:id="@+id/plant_details_moisture_label"
                        layout="@layout/layout_plant_details_info_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="@id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/plant_details_current_label" />

                    <include
                        android:id="@+id/plant_details_temperature_label"
                        layout="@layout/layout_plant_details_info_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/guideline"
                        app:layout_constraintTop_toBottomOf="@id/plant_details_current_label" />

                    <include
                        android:id="@+id/plant_details_humidity_label"
                        layout="@layout/layout_plant_details_info_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="@id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/plant_details_moisture_label" />

                    <include
                        android:id="@+id/plant_details_sunlight_label"
                        layout="@layout/layout_plant_details_info_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@id/guideline"
                        app:layout_constraintTop_toBottomOf="@id/plant_details_temperature_label" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View style="@style/Divider" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:text="@string/moisture_chart_label"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/plant_details_moisture_chart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:text="@string/temperature_chart_label"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/plant_details_temperature_chart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:text="@string/humidity_chart_label"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/plant_details_humidity_chart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:text="@string/sunlight_chart_label"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/plant_details_sunlight_chart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginBottom="15dp" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</RelativeLayout>